Saving OpenAPI Overlay

--- a/_apis/stripe/overlays/accounts-openapi-search.yml
+++ b/_apis/stripe/overlays/accounts-openapi-search.yml
@@ -6,8 +6,8 @@ paths:
     get:
       description: <p>Retrieves the details of an account.</p>
       tags:
-        - V1
-        - Account
+        - Accounts
+      summary: 'Retrieve Account '
   /v1/account_links:
     post:
       description: >-
@@ -15,9 +15,9 @@ paths:
         that the platform can redirect their user to in order to take them
         through the Connect Onboarding flow.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
+        - Accounts
+        - Links
+      summary: Create Account Links
   /v1/account_sessions:
     post:
       description: >-
@@ -25,10 +25,9 @@ paths:
         the platform can use on their front-end to grant client-side API
         access.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
+        - Accounts
+        - Sessions
+      summary: Create Account Sessions
   /v1/accounts:
     get:
       description: >-
@@ -36,11 +35,8 @@ paths:
         href="/docs/connect">Connect</a>. If you’re not a platform, the list is
         empty.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
+      summary: Retrieve Accounts
     post:
       description: >-
         <p>With <a href="/docs/connect">Connect</a>, you can create Stripe
@@ -60,11 +56,8 @@ paths:
 
         You can prefill any information on the account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
+      summary: Create Accounts
   /v1/accounts/{account}:
     delete:
       description: >-
@@ -82,19 +75,13 @@ paths:
         href="https://dashboard.stripe.com/settings/account">account information
         tab in your account settings</a> instead.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
+      summary: Delete Accounts Account
     get:
       description: <p>Retrieves the details of an account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
+      summary: Retrieve Accounts Account
     post:
       description: >-
         <p>Updates a <a href="/docs/connect/accounts">connected account</a> by
@@ -124,42 +111,28 @@ paths:
         <a href="/docs/connect/updating-accounts">Connect</a> documentation to
         learn more about updating accounts.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
+      summary: Create Accounts Account
   /v1/accounts/{account}/bank_accounts:
     post:
       description: <p>Create an external account for a given account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
+        - Bank
+      summary: Create Accounts Account Bank Accounts
   /v1/accounts/{account}/bank_accounts/{id}:
     delete:
       description: <p>Delete a specified external account for a given account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
+        - Bank
+      summary: Delete Accounts Account Bank Accounts Id
     get:
       description: <p>Retrieve a specified external account for a given account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
+        - Bank
+      summary: Retrieve Accounts Account Bank Accounts Id
     post:
       description: >-
         <p>Updates the metadata, account holder name, account holder type of a
@@ -172,13 +145,9 @@ paths:
         <p>You can re-enable a disabled bank account by performing an update
         call without providing any arguments or changes.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
+        - Bank
+      summary: Create Accounts Account Bank Accounts Id
   /v1/accounts/{account}/capabilities:
     get:
       description: >-
@@ -186,95 +155,50 @@ paths:
         capabilities are returned sorted by creation date, with the most recent
         capability appearing first.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
         - Capabilities
+      summary: Retrieve Accounts Account Capabilities
   /v1/accounts/{account}/capabilities/{capability}:
     get:
       description: <p>Retrieves information about the specified Account Capability.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
         - Capabilities
-        - Capability
+      summary: Retrieve Accounts Account Capabilities Capability
     post:
       description: >-
         <p>Updates an existing Account Capability. Request or remove a
         capability by updating its <code>requested</code> parameter.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
         - Capabilities
-        - Capability
+      summary: Create Accounts Account Capabilities Capability
   /v1/accounts/{account}/external_accounts:
     get:
       description: <p>List external accounts for an account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
+        - External
+      summary: Retrieve Accounts Account External Accounts
     post:
       description: <p>Create an external account for a given account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
+        - External
+      summary: Create Accounts Account External Accounts
   /v1/accounts/{account}/external_accounts/{id}:
     delete:
       description: <p>Delete a specified external account for a given account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
+        - External
+      summary: Delete Accounts Account External Accounts Id
     get:
       description: <p>Retrieve a specified external account for a given account.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
+        - External
+      summary: Retrieve Accounts Account External Accounts Id
     post:
       description: >-
         <p>Updates the metadata, account holder name, account holder type of a
@@ -287,16 +211,9 @@ paths:
         <p>You can re-enable a disabled bank account by performing an update
         call without providing any arguments or changes.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
+        - External
+      summary: Create Accounts Account External Accounts Id
   /v1/accounts/{account}/login_links:
     post:
       description: >-
@@ -308,17 +225,10 @@ paths:
         href="/docs/connect/express-accounts">Express accounts</a> connected to
         your platform</strong>.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
+        - Links
+        - Login
+      summary: Create Accounts Account Login Links
   /v1/accounts/{account}/people:
     get:
       description: >-
@@ -326,33 +236,15 @@ paths:
         The people are returned sorted by creation date, with the most recent
         people appearing first.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
         - People
+      summary: Retrieve Accounts Account People
     post:
       description: <p>Creates a new person.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
         - People
+      summary: Create Accounts Account People
   /v1/accounts/{account}/people/{person}:
     delete:
       description: >-
@@ -363,51 +255,24 @@ paths:
         <code>executive</code> parameter, you cannot delete the only verified
         <code>executive</code> on file.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
         - People
         - Person
+      summary: Delete Accounts Account People Person
     get:
       description: <p>Retrieves an existing person.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
         - People
         - Person
+      summary: Retrieve Accounts Account People Person
     post:
       description: <p>Updates an existing person.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
         - People
         - Person
+      summary: Create Accounts Account People Person
   /v1/accounts/{account}/persons:
     get:
       description: >-
@@ -415,37 +280,15 @@ paths:
         The people are returned sorted by creation date, with the most recent
         people appearing first.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
-        - People
-        - Person
         - Persons
+      summary: Retrieve Accounts Account Persons
     post:
       description: <p>Creates a new person.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
-        - People
-        - Person
         - Persons
+      summary: Create Accounts Account Persons
   /v1/accounts/{account}/persons/{person}:
     delete:
       description: >-
@@ -456,54 +299,24 @@ paths:
         <code>executive</code> parameter, you cannot delete the only verified
         <code>executive</code> on file.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
-        - People
         - Person
         - Persons
+      summary: Delete Accounts Account Persons Person
     get:
       description: <p>Retrieves an existing person.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
-        - People
         - Person
         - Persons
+      summary: Retrieve Accounts Account Persons Person
     post:
       description: <p>Updates an existing person.</p>
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
-        - People
         - Person
         - Persons
+      summary: Create Accounts Account Persons Person
   /v1/accounts/{account}/reject:
     post:
       description: >-
@@ -515,18 +328,6 @@ paths:
         Accounts created using live-mode keys may only be rejected once all
         balances are
       tags:
-        - V1
-        - Account
-        - Account_links
-        - Account_sessions
         - Accounts
-        - Bank_accounts
-        - Id
-        - Capabilities
-        - Capability
-        - External_accounts
-        - Login_links
-        - People
-        - Person
-        - Persons
-        - Reje
+        - Reject
+      summary: Create Accounts Account Reject
