--- a/_apis/stripe/overlays/apple-pay-openapi-search.yml
+++ b/_apis/stripe/overlays/apple-pay-openapi-search.yml
@@ -6,27 +6,29 @@ paths:
     get:
       description: <p>List apple pay domains.</p>
       tags:
-        - V1
-        - Apple_pay
+        - Apple
         - Domains
+        - Pay
+      summary: Retrieve Apple Pay Domains
     post:
       description: <p>Create an apple pay domain.</p>
       tags:
-        - V1
-        - Apple_pay
+        - Apple
         - Domains
+        - Pay
+      summary: Create Apple Pay Domains
   /v1/apple_pay/domains/{domain}:
     delete:
       description: <p>Delete an apple pay domain.</p>
       tags:
-        - V1
-        - Apple_pay
+        - Apple
         - Domains
-        - Domain
+        - Pay
+      summary: Delete Apple Pay Domains Domain
     get:
       description: <p>Retrieve an apple pay d
       tags:
-        - V1
-        - Apple_pay
+        - Apple
         - Domains
-        - Doma
+        - Pay
+      summary: Retrieve Apple Pay Domains Domain
