Saving OpenAPI Overlay

--- a/_apis/stripe/overlays/application-secrets-openapi-search.yml
+++ b/_apis/stripe/overlays/application-secrets-openapi-search.yml
@@ -6,29 +6,27 @@ paths:
     get:
       description: <p>List all secrets stored on the given scope.</p>
       tags:
-        - V1
-        - Apps
+        - Applications
         - Secrets
+      summary: Retrieve Apps Secrets
     post:
       description: <p>Create or replace a secret in the secret store.</p>
       tags:
-        - V1
-        - Apps
+        - Applications
         - Secrets
+      summary: Create Apps Secrets
   /v1/apps/secrets/delete:
     post:
       description: <p>Deletes a secret from the secret store by name and scope.</p>
       tags:
-        - V1
-        - Apps
+        - Applications
         - Secrets
-        - Delete
+      summary: Create Apps Secrets Delete
   /v1/apps/secrets/find:
     get:
       description: <p>Finds a secret in the secret store by name and
       tags:
-        - V1
-        - Apps
+        - Applications
+        - Find
         - Secrets
-        - Delete
-        - Fi
+      summary: Retrieve Apps Secrets Find
