--- a/_apis/stripe/overlays/billing-openapi-search.yml
+++ b/_apis/stripe/overlays/billing-openapi-search.yml
@@ -8,42 +8,43 @@ paths:
         <p>Returns a list of configurations that describe the functionality of
         the customer portal.</p>
       tags:
-        - V1
-        - Billing_portal
+        - Billing
         - Configurations
+        - Portals
+      summary: Retrieve Billing Portal Configurations
     post:
       description: >-
         <p>Creates a configuration that describes the functionality and behavior
         of a PortalSession</p>
       tags:
-        - V1
-        - Billing_portal
+        - Billing
         - Configurations
+        - Portals
+      summary: Create Billing Portal Configurations
   /v1/billing_portal/configurations/{configuration}:
     get:
       description: >-
         <p>Retrieves a configuration that describes the functionality of the
         customer portal.</p>
       tags:
-        - V1
-        - Billing_portal
+        - Billing
         - Configurations
-        - Configuration
+        - Portals
+      summary: Retrieve Billing Portal Configurations Configuration
     post:
       description: >-
         <p>Updates a configuration that describes the functionality of the
         customer portal.</p>
       tags:
-        - V1
-        - Billing_portal
+        - Billing
         - Configurations
-        - Configuration
+        - Portals
+      summary: Create Billing Portal Configurations Configuration
   /v1/billing_portal/sessions:
     post:
       description: <p>Creates a session of the customer p
       tags:
-        - V1
-        - Billing_portal
-        - Configurations
-        - Configuration
-        - Sessio
+        - Billing
+        - Portals
+        - Sessions
+      summary: Create Billing Portal Sessions
