--- a/_apis/stripe/overlays/checkout-openapi-search.yml
+++ b/_apis/stripe/overlays/checkout-openapi-search.yml
@@ -6,23 +6,22 @@ paths:
     get:
       description: <p>Returns a list of Checkout Sessions.</p>
       tags:
-        - V1
         - Checkout
         - Sessions
+      summary: Retrieve Checkout Sessions
     post:
       description: <p>Creates a Session object.</p>
       tags:
-        - V1
         - Checkout
         - Sessions
+      summary: Create Checkout Sessions
   /v1/checkout/sessions/{session}:
     get:
       description: <p>Retrieves a Session object.</p>
       tags:
-        - V1
         - Checkout
         - Sessions
-        - Session
+      summary: Retrieve Checkout Sessions Session
   /v1/checkout/sessions/{session}/expire:
     post:
       description: >-
@@ -33,11 +32,10 @@ paths:
         <p>After it expires, a customer can’t complete a Session and customers
         loading the Session see a message saying the Session is expired.</p>
       tags:
-        - V1
         - Checkout
-        - Sessions
-        - Session
         - Expire
+        - Sessions
+      summary: Create Checkout Sessions Session Expire
   /v1/checkout/sessions/{session}/line_items:
     get:
       description: >-
@@ -46,9 +44,8 @@ paths:
         those items. There is also a URL where you can retrieve the full
         (paginated) list of line 
       tags:
-        - V1
         - Checkout
+        - Items
+        - Line
         - Sessions
-        - Session
-        - Expire
-        - Line_ite
+      summary: Retrieve Checkout Sessions Session Line Items
