--- a/_apis/stripe/overlays/disputes-openapi-search.yml
+++ b/_apis/stripe/overlays/disputes-openapi-search.yml
@@ -6,15 +6,14 @@ paths:
     get:
       description: <p>Returns a list of your disputes.</p>
       tags:
-        - V1
         - Disputes
+      summary: Retrieve Disputes
   /v1/disputes/{dispute}:
     get:
       description: <p>Retrieves the dispute with the given ID.</p>
       tags:
-        - V1
         - Disputes
-        - Dispute
+      summary: Retrieve Disputes Dispute
     post:
       description: >-
         <p>When you get a dispute, contacting your customer is always the best
@@ -29,9 +28,8 @@ paths:
         evidence fields to provide, see our <a
         href="/docs/disputes/categories">guide to dispute types</a>.</p>
       tags:
-        - V1
         - Disputes
-        - Dispute
+      summary: Create Disputes Dispute
   /v1/disputes/{dispute}/close:
     post:
       description: >-
@@ -44,7 +42,6 @@ paths:
         <code>needs_response</code> to <code>lost</code>. <em>Closing a dispute
         is irreversible
       tags:
-        - V1
+        - Close
         - Disputes
-        - Dispute
-        - Clo
+      summary: Create Disputes Dispute Close
