--- a/_apis/stripe/overlays/ephemeral-keys-openapi-search.yml
+++ b/_apis/stripe/overlays/ephemeral-keys-openapi-search.yml
@@ -6,12 +6,13 @@ paths:
     post:
       description: <p>Creates a short-lived API key for a given resource.</p>
       tags:
-        - V1
-        - Ephemeral_keys
+        - Ephemeral
+        - Keys
+      summary: Create Ephemeral Keys
   /v1/ephemeral_keys/{key}:
     delete:
       description: <p>Invalidates a short-lived API key for a given res
       tags:
-        - V1
-        - Ephemeral_keys
-        - K
+        - Ephemeral
+        - Keys
+      summary: Delete Ephemeral Keys Key
