--- a/_apis/stripe/overlays/exchange-rates-openapi-search.yml
+++ b/_apis/stripe/overlays/exchange-rates-openapi-search.yml
@@ -9,14 +9,15 @@ paths:
         currencies are converted to one another. Only shows the currencies for
         which Stripe supports.</p>
       tags:
-        - V1
-        - Exchange_rates
+        - Exchange
+        - Rates
+      summary: Retrieve Exchange Rates
   /v1/exchange_rates/{rate_id}:
     get:
       description: >-
         <p>Retrieves the exchange rates from the given currency to every
         supported cur
       tags:
-        - V1
-        - Exchange_rates
-        - Rate_
+        - Exchange
+        - Rates
+      summary: Retrieve Exchange Rates Rate Id
