--- a/_apis/stripe/overlays/files-openapi-search.yml
+++ b/_apis/stripe/overlays/files-openapi-search.yml
@@ -9,8 +9,8 @@ paths:
         sorts and returns the files by their creation dates, placing the most
         recently created files at the top.</p>
       tags:
-        - V1
         - Files
+      summary: Retrieve Files
     post:
       description: >-
         <p>To upload a file to Stripe, you need to send a request of type
@@ -21,8 +21,8 @@ paths:
         <p>All of Stripe’s officially supported Client libraries support sending
         <code>multipart/form-data</code>.</p>
       tags:
-        - V1
         - Files
+      summary: Create Files
   /v1/files/{file}:
     get:
       description: >-
@@ -31,6 +31,6 @@ paths:
         to <a href="/docs/file-upload#download-file-contents">access file
         content
       tags:
-        - V1
+        - File
         - Files
-        - Fi
+      summary: Retrieve Files File
